Updated NetisHR v2 files (mainly menu)

--- a/netishr/administrator_remuneration_settings.html
+++ b/netishr/administrator_remuneration_settings.html
@@ -52,7 +52,7 @@
                     <li class="active">
                         <a href="index.html"><i class="fa fa-th-large"></i><span class="nav-label">Organisation</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level">
-                            <li><a href="#">Units</a></li>
+                            <li><a href="organisation_units.html">Units</a></li>
                             <li><a href="#">Structure<span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
@@ -81,7 +81,7 @@
                                         <a href="competency_dictionary.html">Competency Dictionary</a>
                                     </li>
                                     <li>
-                                        <a href="job_roles.html">Competency Matrix</a>
+                                        <a href="#">Competency Matrix</a>
                                     </li>
                                 </ul>
                             </li>
@@ -227,235 +227,6 @@
                 </ul>
 
             </div>
-        </nav>
-        <div class="sidebar-collapse">
-            <ul class="nav metismenu" id="side-menu">
-                <li class="nav-header">
-                    <div class="dropdown profile-element"> <span>
-                            <img alt="image" class="img-circle" src="img/profile_small.jpg" />
-                             </span>
-                        <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                            <span class="clear"> <span class="block m-t-xs"> <strong class="font-bold">Arnold Siboro</strong>
-                             </span> <span class="text-muted text-xs block">HR Admin <b class="caret"></b></span> </span>
-                        </a>
-                        <ul class="dropdown-menu animated fadeInRight m-t-xs">
-                            <li><a href="profile.html">Profile</a></li>
-                            <li><a href="account.html">Account</a></li>
-                            <li><a href="settings.html">Settings</a></li>
-                            <li class="divider"></li>
-                            <li><a href="login_two_columns.html">Logout</a></li>
-                        </ul>
-                    </div>
-                    <div class="logo-element">
-                        NHR
-                    </div>
-                </li>
-
-                <li>
-                    <a href="index.html"><i class="fa fa-diamond"></i><span class="nav-label">Main</span></a>
-                </li>
-                <li class="active">
-                    <a href="index.html"><i class="fa fa-th-large"></i><span class="nav-label">Organisation</span><span class="fa arrow"></span></a>
-                    <ul class="nav nav-second-level">
-                        <li><a href="#">Level<span class="fa arrow"></span></a>
-                            <ul class="nav nav-third-level">
-                                <li>
-                                    <a href="#">Branches</a>
-                                </li>
-                                <li>
-                                    <a href="#">Internal Groups</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li><a href="#">Structure<span class="fa arrow"></span></a>
-                            <ul class="nav nav-third-level">
-                                <li>
-                                    <a href="job_levels.html">Job Levels/Sub-levels</a>
-                                </li>
-                                <li>
-                                    <a href="job_roles.html">Job Roles/Role Bands</a>
-                                </li>
-                                <li>
-                                    <a href="job_clans.html">Job Clans/Families</a>
-                                </li>
-                                <li>
-                                    <a href="job_titles.html">Job Titles</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li><a href="org_charts.html">Charts</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#"><i class="fa fa-bar-chart-o"></i><span class="nav-label">Job</span><span class="fa arrow"></span></a>
-                    <ul class="nav nav-second-level collapse">
-                        <li><a href="#"><span class="nav-label">Competency Model</span><span class="fa arrow"></span></a>
-                            <ul class="nav nav-third-level">
-                                <li>
-                                    <a href="competency_dictionary.html">Competency Dictionary</a>
-                                </li>
-                                <li>
-                                    <a href="job_roles.html">Competency Matrix</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li><a href="job_description.html">Job Description</a></li>
-                        <li><a href="#">Workload Analysis</a></li>
-                        <li><a href="accountability_matrix.html">Accountability Matrix</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#"><i class="fa fa-envelope"></i> <span class="nav-label">Person</a>
-                    <ul class="nav nav-second-level collapse">
-                        <li><a href="persons.html">Persons</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#"><i class="fa fa-pie-chart"></i> <span class="nav-label">Recruitment</span>  </a>
-                    <ul class="nav nav-second-level collapse">
-                        <li><a href="#">Manpower Planning</a></li>
-                        <li><a href="#">Recruitment Planning</a></li>
-                        <li><a href="#">Applicants</a></li>
-                        <li><a href="#">Selection Process</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#"><i class="fa fa-flask"></i><span class="nav-label">Performance</span><span class="fa arrow"></span></a>
-                    <ul class="nav nav-second-level collapse">
-                        <li><a href="graph_flot.html"><span class="nav-label">Indicators<span class="fa arrow"></span></a>
-                            <ul class="nav nav-third-level">
-                                <li>
-                                    <a href="performance_kpi_view.html">KPIs</a>
-                                </li>
-                                <li>
-                                    <a href="#">OKRs</a>
-                                </li>
-                                <li>
-                                    <a href="performance_bsc.html">BSCs</a>
-                                </li>
-                            </ul>
-                        </li>
-
-                        <li><a href="#"><span class="nav-label">Planning</span><span class="fa arrow"></span></a>
-                            <ul class="nav nav-third-level">
-                                <li>
-                                    <a href="performance_planning.html">Result Targets (KPI)</a>
-                                </li>
-                                <li>
-                                    <a href="#">Process Targets (Competency)</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li><a href="performance_coaching.html">Coaching</a></li>
-                        <li><a href="#">Evidence</a></li>
-                        <li><a href="#"><span class="nav-label">Evaluation</span><span class="fa arrow"></span></a>
-                            <ul class="nav nav-third-level">
-                                <li>
-                                    <a href="#">Periodical Evaluation - Result Targets (KPI)</a>
-                                </li>
-                                <li>
-                                    <a href="#">Final Evaluation - Result Targets (KPI)</a>
-                                </li>
-                                <li>
-                                    <a href="#">Final Evaluation - Process Targets (Competency)</a>
-                                </li>
-
-                            </ul>
-                        </li>
-                        <li><a href="#">Performance Information</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#"><i class="fa fa-edit"></i> <span class="nav-label">Training</span><span class="fa arrow"></span></a>
-                    <ul class="nav nav-second-level collapse">
-                        <li><a href="#">Syllabus</a></li>
-                        <li><a href="#">Events</a></li>
-                        <li><a href="#">Individual Development Plan</a></li>
-                        <li><a href="#">Training Plan</a></li>
-                        <li><a href="#">Executed Training</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#"><i class="fa fa-desktop"></i> <span class="nav-label">Career</span><span class="fa arrow"></span></a>
-                    <ul class="nav nav-second-level collapse">
-                        <li><a href="#">Individual Career Plan</a></li>
-                        <li><a href="#">Search Talent</a></li>
-                        <li><a href="#">Talent Pool</a></li>
-                        <li><a href="#">Talent Development Program</a></li>
-                        <li><a href="#">Talent Readiness</a></li>
-                        <li><a href="#">Transfer</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#"><i class="fa fa-sitemap"></i> <span class="nav-label">Remuneration </span><span class="fa arrow"></span></a>
-                    <ul class="nav nav-second-level collapse">
-                        <li>
-                            <a href="#">Personnel Administration <span class="fa arrow"></span></a>
-                            <ul class="nav nav-third-level">
-                                <li>
-                                    <a href="#">Work Shifts</a>
-                                </li>
-                                <li>
-                                    <a href="#">General Leaves</a>
-                                </li>
-                                <li>
-                                    <a href="#">Attendance Leaves</a>
-                                </li>
-                                <li>
-                                    <a href="#">Overtimes</a>
-                                </li>
-                                <li>
-                                    <a href="#">Benefits</a>
-                                </li>
-                                <li>
-                                    <a href="#">Business Trips</a>
-                                </li>
-                                <li>
-                                    <a href="#">Attendance</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="#">Payroll <span class="fa arrow"></span></a>
-                            <ul class="nav nav-third-level">
-                                <li>
-                                    <a href="#">Salary Entry</a>
-                                </li>
-                                <li>
-                                    <a href="#">Tax Calculation</a>
-                                </li>
-                                <li>
-                                    <a href="#">Overtime Calculation</a>
-                                </li>
-                                <li>
-                                    <a href="#">Salary Calculation</a>
-                                </li>
-                                <li>
-                                    <a href="#">Payslip</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="#">Benefits <span class="fa arrow"></span></a>
-                            <ul class="nav nav-third-level">
-                                <li>
-                                    <a href="#">TBA</a>
-                                </li>
-                                <li>
-                                    <a href="#">TBA</a>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="administrator.html"><i class="fa fa-diamond"></i><span class="nav-label">Administrator</span></a>
-                </li>
-
-
-            </ul>
-
-        </div>
         </nav>
 
         <div id="page-wrapper" class="gray-bg">
