--- a/netishr/administrator.html
+++ b/netishr/administrator.html
@@ -62,7 +62,7 @@
                     <li class="active">
                         <a href="index.html"><i class="fa fa-th-large"></i><span class="nav-label">Organisation</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level">
-                            <li><a href="#">Units</a></li>
+                            <li><a href="organisation_units.html">Units</a></li>
                             <li><a href="#">Structure<span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
@@ -91,7 +91,7 @@
                                         <a href="competency_dictionary.html">Competency Dictionary</a>
                                     </li>
                                     <li>
-                                        <a href="job_roles.html">Competency Matrix</a>
+                                        <a href="#">Competency Matrix</a>
                                     </li>
                                 </ul>
                             </li>
@@ -238,7 +238,6 @@
 
             </div>
         </nav>
-
 
         <div id="page-wrapper" class="gray-bg dashbard-1">
             <div class="row border-bottom">
@@ -405,7 +404,11 @@
                                             <div class="small">Calendar of corporate events</div>
                                         </div>
                                         <p></p>
-                                        <div>Users/Roles Management
+                                        <div><a href="administrator_general_roles.html">Roles Management</a>
+                                            <div class="small">Manage roles and system users</div>
+                                        </div>
+                                        <p></p>
+                                        <div><a href="administrator_general_users.html">Users Management</a>
                                             <div class="small">Manage roles and system users</div>
                                         </div>
                                     </div>
