--- a/netishr/administrator_system_settings.html
+++ b/netishr/administrator_system_settings.html
@@ -62,7 +62,7 @@
                     <li class="active">
                         <a href="index.html"><i class="fa fa-th-large"></i><span class="nav-label">Organisation</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level">
-                            <li><a href="#">Units</a></li>
+                            <li><a href="organisation_units.html">Units</a></li>
                             <li><a href="#">Structure<span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
@@ -91,7 +91,7 @@
                                         <a href="competency_dictionary.html">Competency Dictionary</a>
                                     </li>
                                     <li>
-                                        <a href="job_roles.html">Competency Matrix</a>
+                                        <a href="#">Competency Matrix</a>
                                     </li>
                                 </ul>
                             </li>
