--- a/netishr/competency_dictionary_new.html
+++ b/netishr/competency_dictionary_new.html
@@ -133,7 +133,7 @@
                     <li class="active">
                         <a href="index.html"><i class="fa fa-th-large"></i><span class="nav-label">Organisation</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level">
-                            <li><a href="#">Units</a></li>
+                            <li><a href="organisation_units.html">Units</a></li>
                             <li><a href="#">Structure<span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
@@ -162,7 +162,7 @@
                                         <a href="competency_dictionary.html">Competency Dictionary</a>
                                     </li>
                                     <li>
-                                        <a href="job_roles.html">Competency Matrix</a>
+                                        <a href="#">Competency Matrix</a>
                                     </li>
                                 </ul>
                             </li>
@@ -638,38 +638,38 @@
 
                                                 <div class="hr-line-dashed"></div>
                                                 <div class="ibox-tools">
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#newindicator">New indicator</button>
-<div class="modal inmodal" id="newindicator" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content animated bounceInRight">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                <i class="fa fa-laptop modal-icon"></i>
-                <h4 class="modal-title">New indicator</h4>
-                <small class="font-bold">Please enter new indicator.</small>
-            </div>
-            <div class="modal-body">
-                <div class="form-group">
-                    <label class="col-sm-2 control-label">Order: </label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label">Description: </label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control">
-                    </div>
-                </div>
+                                                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#newindicator">New indicator</button>
+                                                    <div class="modal inmodal" id="newindicator" tabindex="-1" role="dialog" aria-hidden="true">
+                                                        <div class="modal-dialog">
+                                                            <div class="modal-content animated bounceInRight">
+                                                                <div class="modal-header">
+                                                                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                                                                    <i class="fa fa-laptop modal-icon"></i>
+                                                                    <h4 class="modal-title">New indicator</h4>
+                                                                    <small class="font-bold">Please enter new indicator.</small>
+                                                                </div>
+                                                                <div class="modal-body">
+                                                                    <div class="form-group">
+                                                                        <label class="col-sm-2 control-label">Order: </label>
+                                                                        <div class="col-sm-10">
+                                                                            <input type="text" class="form-control">
+                                                                        </div>
+                                                                    </div>
+                                                                    <div class="form-group">
+                                                                        <label class="col-sm-2 control-label">Description: </label>
+                                                                        <div class="col-sm-10">
+                                                                            <input type="text" class="form-control">
+                                                                        </div>
+                                                                    </div>
 
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-white" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
-            </div>
-        </div>
-    </div>
-</div>
+                                                                </div>
+                                                                <div class="modal-footer">
+                                                                    <button type="button" class="btn btn-white" data-dismiss="modal">Close</button>
+                                                                    <button type="button" class="btn btn-primary">Save changes</button>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
 
 
                                                 </div>
@@ -710,38 +710,38 @@
 
                                                 <div class="hr-line-dashed"></div>
                                                 <div class="ibox-tools">
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">New indicator</button>
-<div class="modal inmodal" id="myModal" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content animated bounceInRight">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                <i class="fa fa-laptop modal-icon"></i>
-                <h4 class="modal-title">New indicator</h4>
-                <small class="font-bold">Please enter new indicator.</small>
-            </div>
-            <div class="modal-body">
-                <div class="form-group">
-                    <label class="col-sm-2 control-label">Order: </label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label">Description: </label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control">
-                    </div>
-                </div>
+                                                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">New indicator</button>
+                                                    <div class="modal inmodal" id="myModal" tabindex="-1" role="dialog" aria-hidden="true">
+                                                        <div class="modal-dialog">
+                                                            <div class="modal-content animated bounceInRight">
+                                                                <div class="modal-header">
+                                                                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                                                                    <i class="fa fa-laptop modal-icon"></i>
+                                                                    <h4 class="modal-title">New indicator</h4>
+                                                                    <small class="font-bold">Please enter new indicator.</small>
+                                                                </div>
+                                                                <div class="modal-body">
+                                                                    <div class="form-group">
+                                                                        <label class="col-sm-2 control-label">Order: </label>
+                                                                        <div class="col-sm-10">
+                                                                            <input type="text" class="form-control">
+                                                                        </div>
+                                                                    </div>
+                                                                    <div class="form-group">
+                                                                        <label class="col-sm-2 control-label">Description: </label>
+                                                                        <div class="col-sm-10">
+                                                                            <input type="text" class="form-control">
+                                                                        </div>
+                                                                    </div>
 
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-white" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
-            </div>
-        </div>
-    </div>
-</div>
+                                                                </div>
+                                                                <div class="modal-footer">
+                                                                    <button type="button" class="btn btn-white" data-dismiss="modal">Close</button>
+                                                                    <button type="button" class="btn btn-primary">Save changes</button>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
 
                                                 </div>
                                                 <table class="table">
