--- a/netishr/organisation_units.html
+++ b/netishr/organisation_units.html
@@ -49,7 +49,7 @@
                     <li class="active">
                         <a href="index.html"><i class="fa fa-th-large"></i><span class="nav-label">Organisation</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level">
-                            <li><a href="#">Units</a></li>
+                            <li><a href="organisation_units.html">Units</a></li>
                             <li><a href="#">Structure<span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
