Updated NetisHR v2 screens

--- a/netishr/index.html
+++ b/netishr/index.html
@@ -84,7 +84,7 @@
                     </li>
                     <li>
                         <a href="#"><i class="fa fa-bar-chart-o"></i><span class="nav-label">Job</span><span class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level collapse">
+                        <ul class="nav nav-second-level">
                             <li><a href="#"><span class="nav-label">Competency Model</span><span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
@@ -102,14 +102,14 @@
                     </li>
                     <li>
                         <a href="#"><i class="fa fa-envelope"></i> <span class="nav-label">Person</span><span class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level collapse">
+                        <ul class="nav nav-second-level  ">
                             <li><a href="persons.html">Staffs</a></li>
                             <li><a href="#">Applicants</a></li>
                         </ul>
                     </li>
                     <li>
                         <a href="#"><i class="fa fa-pie-chart"></i> <span class="nav-label">Recruitment</span><span class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level collapse">
+                        <ul class="nav nav-second-level  ">
                             <li><a href="#">Manpower Planning</a></li>
                             <li><a href="#">Recruitment Planning</a></li>
                             <li><a href="#">Selection Process</a></li>
@@ -117,7 +117,7 @@
                     </li>
                     <li>
                         <a href="#"><i class="fa fa-flask"></i><span class="nav-label">Performance</span><span class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level collapse">
+                        <ul class="nav nav-second-level  ">
                             <li><a href="graph_flot.html"><span class="nav-label">Indicators<span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
@@ -163,7 +163,7 @@
                     </li>
                     <li>
                         <a href="#"><i class="fa fa-edit"></i> <span class="nav-label">Training</span><span class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level collapse">
+                        <ul class="nav nav-second-level  ">
                             <li><a href="#">Syllabus</a></li>
                             <li><a href="#">Events</a></li>
                             <li><a href="#">Individual Development Plan</a></li>
@@ -172,7 +172,7 @@
                     </li>
                     <li>
                         <a href="#"><i class="fa fa-desktop"></i> <span class="nav-label">Career</span><span class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level collapse">
+                        <ul class="nav nav-second-level  ">
                             <li><a href="#">Individual Career Plan</a></li>
                             <li><a href="#">Search Talent</a></li>
                             <li><a href="#">Talent Pool</a></li>
@@ -183,22 +183,27 @@
                     </li>
                     <li>
                         <a href="#"><i class="fa fa-sitemap"></i> <span class="nav-label">Remuneration </span><span class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level collapse">
+                        <ul class="nav nav-second-level  ">
                             <li>
                                 <a href="#">Personnel Administration <span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
+                                        <a href="mycalendar.html">My Calendar</a>
+                                    </li>
+                                    <li>
                                         <a href="#">Work Shifts</a>
                                     </li>
-                                    <li>
-                                        <a href="#">Leaves</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Overtimes</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Attendances</a>
-                                    </li>
+                                    <!--
+<li>
+                                <a href="#">Leaves</a>
+                            </li>
+                            <li>
+                                <a href="#">Overtimes</a>
+                            </li>
+                            <li>
+                                <a href="#">Attendances</a>
+                            </li>
+-->
                                     <li>
                                         <a href="#">Benefits</a>
                                     </li>
