--- a/netishr/administrator.html
+++ b/netishr/administrator.html
@@ -33,212 +33,12 @@
 <body>
     <div id="wrapper">
         <nav class="navbar-default navbar-static-side" role="navigation">
-            <div class="sidebar-collapse">
-                <ul class="nav metismenu" id="side-menu">
-                    <li class="nav-header">
-                        <div class="dropdown profile-element"> <span>
-                            <img alt="image" class="img-circle" src="img/profile_small.jpg" />
-                             </span>
-                            <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                                <span class="clear"> <span class="block m-t-xs"> <strong class="font-bold">Arnold Siboro</strong>
-                             </span> <span class="text-muted text-xs block">HR Admin <b class="caret"></b></span> </span>
-                            </a>
-                            <ul class="dropdown-menu animated fadeInRight m-t-xs">
-                                <li><a href="profile.html">Profile</a></li>
-                                <li><a href="account.html">Account</a></li>
-                                <li><a href="settings.html">Settings</a></li>
-                                <li class="divider"></li>
-                                <li><a href="login_two_columns.html">Logout</a></li>
-                            </ul>
-                        </div>
-                        <div class="logo-element">
-                            NHR
-                        </div>
-                    </li>
-
-                    <li>
-                        <a href="index.html"><i class="fa fa-diamond"></i><span class="nav-label">Main</span></a>
-                    </li>
-                    <li class="active">
-                        <a href="index.html"><i class="fa fa-th-large"></i><span class="nav-label">Organisation</span><span class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level">
-                            <li><a href="organisation_units.html">Units</a></li>
-                            <li><a href="#">Structure<span class="fa arrow"></span></a>
-                                <ul class="nav nav-third-level">
-                                    <li>
-                                        <a href="job_levels.html">Job Levels/Sub-levels</a>
-                                    </li>
-                                    <li>
-                                        <a href="job_roles.html">Job Roles/Role Bands</a>
-                                    </li>
-                                    <li>
-                                        <a href="job_clans.html">Job Clans/Families</a>
-                                    </li>
-                                    <li>
-                                        <a href="job_titles.html">Job Titles</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li><a href="organisation_diagrams.html">Diagrams</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-bar-chart-o"></i><span class="nav-label">Job</span><span class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level collapse">
-                            <li><a href="#"><span class="nav-label">Competency Model</span><span class="fa arrow"></span></a>
-                                <ul class="nav nav-third-level">
-                                    <li>
-                                        <a href="competency_dictionary.html">Competency Dictionary</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Competency Matrix</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li><a href="job_description.html">Job Description</a></li>
-                            <li><a href="#">Workload Analysis</a></li>
-                            <li><a href="accountability_matrix.html">Accountability Matrix</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-envelope"></i> <span class="nav-label">Person</span><span class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level collapse">
-                            <li><a href="persons.html">Staffs</a></li>
-                            <li><a href="#">Applicants</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-pie-chart"></i> <span class="nav-label">Recruitment</span><span class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level collapse">
-                            <li><a href="#">Manpower Planning</a></li>
-                            <li><a href="#">Recruitment Planning</a></li>
-                            <li><a href="#">Selection Process</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-flask"></i><span class="nav-label">Performance</span><span class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level collapse">
-                            <li><a href="graph_flot.html"><span class="nav-label">Indicators<span class="fa arrow"></span></a>
-                                <ul class="nav nav-third-level">
-                                    <li>
-                                        <a href="performance_kpi_view.html">KPIs</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">OKRs</a>
-                                    </li>
-                                    <li>
-                                        <a href="performance_bsc.html">BSCs</a>
-                                    </li>
-                                </ul>
-                            </li>
-
-                            <li><a href="#"><span class="nav-label">Planning</span><span class="fa arrow"></span></a>
-                                <ul class="nav nav-third-level">
-                                    <li>
-                                        <a href="performance_planning.html">Result Targets (KPI)</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Process Targets (Competency)</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li><a href="performance_coaching.html">Coaching</a></li>
-                            <li><a href="#">Evidence</a></li>
-                            <li><a href="#"><span class="nav-label">Evaluation</span><span class="fa arrow"></span></a>
-                                <ul class="nav nav-third-level">
-                                    <li>
-                                        <a href="#">Periodical Evaluation - Result Targets (KPI)</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Final Evaluation - Result Targets (KPI)</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Final Evaluation - Process Targets (Competency)</a>
-                                    </li>
-
-                                </ul>
-                            </li>
-                            <li><a href="#">Performance Information</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-edit"></i> <span class="nav-label">Training</span><span class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level collapse">
-                            <li><a href="#">Syllabus</a></li>
-                            <li><a href="#">Events</a></li>
-                            <li><a href="#">Individual Development Plan</a></li>
-                            <li><a href="#">Training Plans and Execution</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-desktop"></i> <span class="nav-label">Career</span><span class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level collapse">
-                            <li><a href="#">Individual Career Plan</a></li>
-                            <li><a href="#">Search Talent</a></li>
-                            <li><a href="#">Talent Pool</a></li>
-                            <li><a href="#">Talent Development Program</a></li>
-                            <li><a href="#">Talent Readiness</a></li>
-                            <li><a href="#">Transfer</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-sitemap"></i> <span class="nav-label">Remuneration </span><span class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level collapse">
-                            <li>
-                                <a href="#">Personnel Administration <span class="fa arrow"></span></a>
-                                <ul class="nav nav-third-level">
-                                    <li>
-                                        <a href="#">Work Shifts</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Leaves</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Overtimes</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Attendances</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Benefits</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Business Trips</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#">Payroll <span class="fa arrow"></span></a>
-                                <ul class="nav nav-third-level">
-                                    <li>
-                                        <a href="#">Salary Entry</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Tax Calculation</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Overtime Calculation</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Salary Calculation</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Payslip</a>
-                                    </li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="administrator.html"><i class="fa fa-diamond"></i><span class="nav-label">Administrator</span></a>
-                    </li>
-
-
-                </ul>
-
-            </div>
+            <div w3-include-html="navigation.html"></div>
+            <script src="js/w3data.js"></script>
+            <script>
+                w3IncludeHTML();
+            </script>
         </nav>
-
         <div id="page-wrapper" class="gray-bg dashbard-1">
             <div class="row border-bottom">
                 <nav class="navbar navbar-static-top" role="navigation" style="margin-bottom: 0">
@@ -443,8 +243,6 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="col-lg-4">
                                 <div class="ibox float-e-margins">
                                     <div class="ibox-title">
                                         <h5>Person</h5>
@@ -455,6 +253,8 @@
                                         Upload Persons
                                     </div>
                                 </div>
+                            </div>
+                            <div class="col-lg-4">
                                 <div class="ibox float-e-margins">
                                     <div class="ibox-title">
                                         <h5>Recruitment</h5>
@@ -478,8 +278,6 @@
 
                                     </div>
                                 </div>
-                            </div>
-                            <div class="col-lg-4">
                                 <div class="ibox float-e-margins">
                                     <div class="ibox-title">
                                         <h5>Training</h5>
@@ -505,6 +303,8 @@
                                         Policy Setting
                                     </div>
                                 </div>
+                            </div>
+                            <div class="col-lg-4">
                                 <div class="ibox float-e-margins">
                                     <div class="ibox-title">
                                         <h5>Renumeration</h5>
@@ -520,8 +320,6 @@
                                     </div>
 
                                 </div>
-                            </div>
-                            <div class="col-lg-4">
                                 <div class="ibox float-e-margins">
                                     <div class="ibox-title">
                                         <h5>System Management</h5>
@@ -529,12 +327,57 @@
                                         </div>
                                     </div>
                                     <div class="ibox-content">
+                                        <div><a href="administrator_system_settings.html">System Information</a>
+                                            <div class="small">Various system information</div>
+                                        </div>
+                                        <p></p>
                                         <div><a href="administrator_system_settings.html">System Settings</a>
                                             <div class="small">Various system settings</div>
                                         </div>
                                         <p></p>
+                                        <div><a href="administrator_system_settings.html">Master Data</a>
+                                            <div class="small">Master data management</div>
+                                        </div>
+                                        <p></p>
                                         <div><a href="administrator_system_sites.html">Site Management</a>
                                             <div class="small">Managing sites on this system</div>
+                                        </div>
+                                        <p></p>
+                                        <div><a href="administrator_system_sites.html">License Management</a>
+                                            <div class="small">Managing licenses on this system</div>
+                                        </div>
+                                    </div>
+
+                                </div>
+                                <div class="ibox float-e-margins">
+                                    <div class="ibox-title">
+                                        <h5>Site Management</h5>
+                                        <div class="ibox-tools">
+                                        </div>
+                                    </div>
+                                    <div class="ibox-content">
+                                        <div><a href="administrator_system_settings.html">Company Info</a>
+                                            <div class="small">Company Info</div>
+                                        </div>
+                                        <p></p>
+                                        <div><a href="administrator_system_settings.html">Site Settings</a>
+                                            <div class="small">Site Settings</div>
+                                        </div>
+                                        <p></p>
+                                        <div><a href="administrator_system_settings.html">Domain Mappings</a>
+                                            <div class="small">Domain Mappings</div>
+                                        </div>
+                                        <p></p>
+                                        <div><a href="administrator_system_sites.html">Menu Design</a>
+                                            <div class="small">Menu Design</div>
+                                        </div>
+                                        <p></p>
+                                        <div><a href="administrator_system_sites.html">Site Menu Assignment</a>
+                                            <div class="small">Site Menu Assignment</div>
+                                        </div>
+                                        <p></p>
+                                        <div><a href="administrator_system_sites.html">Role Menu Assignment</a>
+                                            <div class="small">Role Menu Assignment</div>
                                         </div>
                                     </div>
 
