Updated NetisHR v2 screens

--- a/netishr/administrator.html
+++ b/netishr/administrator.html
@@ -320,6 +320,7 @@
                                     </div>
 
                                 </div>
+                                <!-- This system management menu items are for system administrator only -->
                                 <div class="ibox float-e-margins">
                                     <div class="ibox-title">
                                         <h5>System Management</h5>
@@ -327,28 +328,29 @@
                                         </div>
                                     </div>
                                     <div class="ibox-content">
-                                        <div><a href="administrator_system_settings.html">System Information</a>
+                                        <div><a href="#">System Information</a>
                                             <div class="small">Various system information</div>
                                         </div>
                                         <p></p>
-                                        <div><a href="administrator_system_settings.html">System Settings</a>
+                                        <div><a href="#">System Settings</a>
                                             <div class="small">Various system settings</div>
                                         </div>
                                         <p></p>
-                                        <div><a href="administrator_system_settings.html">Master Data</a>
+                                        <div><a href="#">Master Data</a>
                                             <div class="small">Master data management</div>
                                         </div>
                                         <p></p>
-                                        <div><a href="administrator_system_sites.html">Site Management</a>
+                                        <div><a href="#">Site Management</a>
                                             <div class="small">Managing sites on this system</div>
                                         </div>
                                         <p></p>
-                                        <div><a href="administrator_system_sites.html">License Management</a>
+                                        <div><a href="#">License Management</a>
                                             <div class="small">Managing licenses on this system</div>
                                         </div>
                                     </div>
 
                                 </div>
+                                <!-- This site management menu items are for site administrator only -->
                                 <div class="ibox float-e-margins">
                                     <div class="ibox-title">
                                         <h5>Site Management</h5>
@@ -356,27 +358,27 @@
                                         </div>
                                     </div>
                                     <div class="ibox-content">
-                                        <div><a href="administrator_system_settings.html">Company Info</a>
+                                        <div><a href="#">Company Info</a>
                                             <div class="small">Company Info</div>
                                         </div>
                                         <p></p>
-                                        <div><a href="administrator_system_settings.html">Site Settings</a>
+                                        <div><a href="#">Site Settings</a>
                                             <div class="small">Site Settings</div>
                                         </div>
                                         <p></p>
-                                        <div><a href="administrator_system_settings.html">Domain Mappings</a>
+                                        <div><a href="#">Domain Mappings</a>
                                             <div class="small">Domain Mappings</div>
                                         </div>
                                         <p></p>
-                                        <div><a href="administrator_system_sites.html">Menu Design</a>
+                                        <div><a href="#">Menu Design</a>
                                             <div class="small">Menu Design</div>
                                         </div>
                                         <p></p>
-                                        <div><a href="administrator_system_sites.html">Site Menu Assignment</a>
+                                        <div><a href="#">Site Menu Assignment</a>
                                             <div class="small">Site Menu Assignment</div>
                                         </div>
                                         <p></p>
-                                        <div><a href="administrator_system_sites.html">Role Menu Assignment</a>
+                                        <div><a href="#">Role Menu Assignment</a>
                                             <div class="small">Role Menu Assignment</div>
                                         </div>
                                     </div>
